rule for buttons following other buttons to correct lack of spacing on node editing pages

--- a/sites/all/themes/ocha_basic/sass/components/_buttons.scss
+++ b/sites/all/themes/ocha_basic/sass/components/_buttons.scss
@@ -26,3 +26,7 @@ button, input[type="submit"] {
     color: $cd-white;
   }
 }
+
+.btn + .btn {
+  margin-left: 8px;
+}
